# trainspotter

./: .gitignore  LICENSE  README.md  config.yaml.example  opencode.json  pyproject.toml
deploy/: setup-pi.sh  trainspotter.service
src/trainspotter/: __main__.py  bot.py  config.py  models.py  scraper.py  stations.py
