[project]
name = "trainspotter"
version = "0.1.0"
description = "Tool per verificare disponibilità e prezzi biglietti Italo Treno"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "playwright>=1.40",
    "python-telegram-bot>=22.7",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
trainspotter = "trainspotter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
